docs: intellij